Added whatsapp htmls
Created 3 pages: Texting, Audio call, Video call.
they all still need UI work.

--- a/demo/demo-3.css
+++ b/demo/demo-3.css
@@ -5,12 +5,16 @@ button {
 .content {
   display: flex;
   justify-content: center;
+  display: table-cell;
 }
 
 .user {
   padding: 20px;
+  background-color: aquamarine;
 }
-
+#bob{
+  background-color: aquamarine;
+}
 .message {
   padding: 2px 4px;
   margin: 0px;
