--- a/demo/demo-2.css
+++ b/demo/demo-2.css
@@ -37,12 +37,11 @@
 }
 
 .connect {
-  background: rgb(140, 1, 1);
   display:inline-block;
     width:auto;
- 
-    padding:10px;
-    margin:5px;
+    height:0%;
+    /* padding:10px;
+    margin:5px; */
     width: 60%;
     margin-left: 20px;
     text-align: center;
@@ -54,4 +53,20 @@
 input[type="checkbox"]  {
   display: none;
 }
+
+
+
+button {
+  border: none;
+  cursor: pointer;
+  appearance: none;
+  background-color: inherit;
+  margin: 0;
+  padding: 0;
+  width: 60px;
+  height: 100px;
+
+
+}
+
 
