--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 /*
 *Importing Demos CSS
 */
-@import "demo/demo-1.css";
-@import "demo/demo-2.css";
-@import "demo/demo-3.css";
+@import "../demo/demo-1.css";
+@import "../demo/demo-2.css";
+@import "../demo/demo-3.css";
 /*************** 
  * BASE STYLES *
  ***************/
@@ -35,7 +35,7 @@ a {
 
 /* Variables */
 :root {
-  --background-green: #009688;
+  --background-green: rgb(0, 150, 136);
   --background-beige: #d7dbd6;
   --sidebar-header: #ededed;
   --notifications-text-color: rgba(48, 48, 48, 0.96);
@@ -657,3 +657,102 @@ input[type="range"] {
 .type-message-bar-right {
   margin-left: 2rem;
 }
+
+/*_______________________________________AUDIO CALL CONTENT__________________________________ */
+
+#audio-call-content{
+  background-color: rgba(0, 150, 136,0.3);
+  border-radius: 25px;
+  padding: 2rem;
+  text-align: center;
+  width: fit-content;
+}
+
+
+/* Audio part */
+audio:hover, audio:focus, audio:active
+{
+-webkit-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+-moz-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+-webkit-transform: scale(1.05);
+-moz-transform: scale(1.05);
+transform: scale(1.05);
+}
+
+
+audio
+{
+-webkit-transition:all 0.5s linear;
+-moz-transition:all 0.5s linear;
+-o-transition:all 0.5s linear;
+transition:all 0.5s linear;
+-moz-box-shadow: 2px 2px 4px 0px #006773;
+-webkit-box-shadow:  2px 2px 4px 0px #006773;
+box-shadow: 2px 2px 4px 0px #006773;
+-moz-border-radius:7px 7px 7px 7px ;
+-webkit-border-radius:7px 7px 7px 7px ;
+border-radius:7px 7px 7px 7px ;
+}
+
+
+/* Hold buttons */
+
+
+.grid-container {
+  display:table-cell;
+  grid-template-columns: repeat(auto-fit, 300px);
+  grid-gap: 30px;
+  padding: 20px;
+  justify-items: center;
+  justify-content: center;
+  align-items: start;
+
+}
+/* toggle-pill */
+.toggle-pill input[type="checkbox"] {
+  display: none;
+}
+/* toggle-pill-color */
+.toggle-pill-color input[type="checkbox"] {
+  display: none;
+}
+.toggle-pill-color input[type="checkbox"] + label {
+  display: block;
+  position: relative;
+  width: 12em;
+  height: 3em;
+  margin-bottom: 20px;
+  border-radius: 1em;
+  background: #e84d4d;
+  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-transition: background 0.1s ease-in-out;
+  transition: background 0.1s ease-in-out;
+}
+.toggle-pill-color input[type="checkbox"] + label:before {
+  content: "";
+  display: block;
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 1em;
+  background: #fff;
+  box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 0.2em;
+  top: 0.2em;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.toggle-pill-color input[type="checkbox"]:checked + label {
+  background: #47cf73;
+}
+.toggle-pill-color input[type="checkbox"]:checked + label:before {
+  box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.2);
+  left: 1.6em;
+}
+/* toggle-pill-color end */
+
